# test_social_network

./: .env  .gitignore  Dockerfile  docker-compose.dev.yml  pyproject.toml  requirements.txt
src/: manage.py
src/app/: admin.py  apps.py  consts.py  models.py  swagger.py  views.py
src/app/adapter/: repository.py
src/app/contrib/: logger.py  permissions.py  response_err.py
src/app/domain/: model.py
src/app/management/commands/: create_super_user.py
src/app/migrations/: 0001_initial.py  0002_like.py  0003_like_timestamp.py
src/app/service_layer/: serializers.py  service.py
src/logs/: response_err_2020-08-24
src/settings/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
