[tool.poetry]
name = "gz_ms_reports"
version = "0.1.0"
description = "Reports microservice"
authors = ["swaldom"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.0"
djangorestframework = "^3.11.1"
pytest = "^6.0.1"
python-decouple = "^3.3"
psycopg2-binary = "^2.8.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
